--- a/app/src/main/res/layout/activity_view_video.xml
+++ b/app/src/main/res/layout/activity_view_video.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".ViewVideo">
     <VideoView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:id="@+id/videoView"></VideoView>
 
 </LinearLayout>
