--- a/app/src/main/res/layout/activity_view_video.xml
+++ b/app/src/main/res/layout/activity_view_video.xml
@@ -1,13 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#000"
     android:layout_height="match_parent"
     tools:context=".ViewVideo">
     <VideoView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_gravity="center"
+        android:backgroundTint="#000"
+        android:layout_centerInParent="true"
         android:id="@+id/videoView"></VideoView>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:id="@+id/topFrameLayout">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:background="#000"
+            android:alpha="0.5"
+            android:layout_height="match_parent"
+            android:padding="7dp"></LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content"
+            android:padding="7dp">
 
-</LinearLayout>
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:id="@+id/backArrow"
+                android:layout_marginLeft="20dp"
+                android:background="?android:selectableItemBackground"
+                android:src="@drawable/ic_arrow_back_black_24dp"></ImageView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:textColor="#FFF"
+                android:textSize="15dp"
+                android:layout_marginTop="2dp"
+                android:text="PUBG MOBILE 122121"
+                android:id="@+id/videoTitle"></TextView>
+        </LinearLayout>
+    </FrameLayout>
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_alignParentBottom="true"
+    android:id="@+id/bottomFrameLayout"
+    android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:background="#000"
+        android:alpha="0.5"
+        android:layout_height="match_parent"></LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:background="#696969">
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="00:00"
+    android:textColor="#FFF"
+    android:textSize="15dp"
+
+    android:layout_alignParentLeft="true"
+    android:id="@+id/startTime"></TextView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="00:00"
+            android:textColor="#FFF"
+            android:textSize="15dp"
+            android:layout_alignParentRight="true"
+            android:id="@+id/endTime"></TextView>
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:background="#696969">
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/screenLock"
+            android:src="@drawable/ic_lock_black_24dp"></ImageView>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/previous"
+            android:src="@drawable/ic_skip_previous_black_24dp"></ImageView>
+        <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/play"
+          android:src="@drawable/ic_play_arrow_black_24dp"></ImageView>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/pause"
+            android:src="@drawable/ic_pause_black_24dp"></ImageView>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/next"
+            android:src="@drawable/ic_skip_next_black_24dp"></ImageView>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/fullScreen"
+            android:src="@drawable/ic_zoom_out_map_black_24dp"></ImageView>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/cropScreen"
+            android:src="@drawable/ic_crop_black_24dp"></ImageView>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/smallScreen"
+            android:src="@drawable/ic_fullscreen_black_24dp"></ImageView>
+    </LinearLayout>
+    </LinearLayout>
+</FrameLayout>
+
+
+</RelativeLayout>
