--- a/app/src/main/res/layout/activity_view_video.xml
+++ b/app/src/main/res/layout/activity_view_video.xml
@@ -7,8 +7,6 @@
     android:layout_height="match_parent"
     android:background="#000"
     tools:context=".ViewVideo">
-
-
     <VideoView
         android:id="@+id/videoView"
         android:layout_width="fill_parent"
@@ -16,6 +14,50 @@
         android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:backgroundTint="#000"></VideoView>
+    <TextView
+        android:textSize="25.0sp"
+        android:textStyle="bold"
+        android:textColor="#ffffffff"
+        android:gravity="center"
+        android:id="@+id/textvolume"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="         "
+        android:drawableBottom="@drawable/vvloume"
+        android:layout_alignParentLeft="true"
+        android:layout_centerInParent="true" />
+    <TextView
+        android:textSize="25.0sp"
+        android:textStyle="bold"
+        android:textColor="#ffffffff"
+        android:gravity="center"
+        android:id="@+id/textbrightness"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="            "
+        android:drawableBottom="@drawable/brightnees"
+        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true" />
+    <SeekBar
+        android:id="@+id/brightness_seekbar"
+        android:layout_width="130.0dip"
+        android:layout_height="15.0dip"
+        android:progressDrawable="@drawable/progress"
+        android:thumb="@drawable/thumb"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:rotation="-90.0" />
+    <SeekBar
+        android:id="@+id/volume_seekbar"
+        android:layout_width="130.0dip"
+        android:layout_height="15.0dip"
+        android:progressDrawable="@drawable/progress"
+        android:thumb="@drawable/thumb"
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:rotation="-90.0" />
+
+
     <TextView
         android:id="@+id/screenSizeText"
         android:layout_width="wrap_content"
