--- a/app/src/main/res/layout/activity_view_video.xml
+++ b/app/src/main/res/layout/activity_view_video.xml
@@ -20,11 +20,10 @@
         android:textColor="#ffffffff"
         android:gravity="center"
         android:id="@+id/textvolume"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="70dp"
         android:text="         "
-        android:drawableBottom="@drawable/vvloume"
-        android:layout_alignParentLeft="true"
+        android:drawableBottom="@drawable/ic_volume_up_black_24dp"
         android:layout_centerInParent="true" />
     <TextView
         android:textSize="25.0sp"
@@ -32,11 +31,28 @@
         android:textColor="#ffffffff"
         android:gravity="center"
         android:id="@+id/textbrightness"
+        android:layout_width="50dp"
+        android:layout_height="70dp"
+        android:text="            "
+        android:drawableBottom="@drawable/ic_wb_sunny_black_24dp"
+        android:layout_centerInParent="true" />
+    <TextView
+        android:textSize="35.0sp"
+        android:textStyle="bold"
+        android:textColor="#ffffffff"
+        android:gravity="center"
+        android:id="@+id/textseekbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="            "
-        android:drawableBottom="@drawable/brightnees"
-        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true" />
+    <TextView
+        android:textSize="45.0sp"
+        android:textStyle="bold"
+        android:textColor="#ffffffff"
+        android:gravity="center"
+        android:id="@+id/textplay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
     <SeekBar
         android:id="@+id/brightness_seekbar"
@@ -44,8 +60,8 @@
         android:layout_height="15.0dip"
         android:progressDrawable="@drawable/progress"
         android:thumb="@drawable/thumb"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
         android:rotation="-90.0" />
     <SeekBar
         android:id="@+id/volume_seekbar"
@@ -53,8 +69,8 @@
         android:layout_height="15.0dip"
         android:progressDrawable="@drawable/progress"
         android:thumb="@drawable/thumb"
+        android:layout_alignParentLeft="true"
         android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
         android:rotation="-90.0" />
 
 
