--- a/app/src/main/res/layout/video_folders_items.xml
+++ b/app/src/main/res/layout/video_folders_items.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/custom_ripple"
     android:id="@+id/relativeLayout"
-    android:padding="15dp">
+    android:padding="10dp">
 
     <ImageView  android:id="@+id/folderIcon"
         android:layout_width="60dp"
