--- a/app/src/main/res/layout/native_ad_layout.xml
+++ b/app/src/main/res/layout/native_ad_layout.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="15dp">
     <com.google.android.ads.nativetemplates.TemplateView
         android:id="@+id/my_template"
         android:layout_centerInParent="true"
