lates with grid layout

--- a/app/src/main/res/layout/banner_ad_layout.xml
+++ b/app/src/main/res/layout/banner_ad_layout.xml
@@ -9,6 +9,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-2758711540829766/6097782831">
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+<!--        ads:adUnitId="ca-app-pub-2758711540829766/6097782831">-->
+
     </com.google.android.gms.ads.AdView>
 </LinearLayout>
