--- a/app/src/main/res/layout/video_folders_items.xml
+++ b/app/src/main/res/layout/video_folders_items.xml
@@ -5,19 +5,19 @@
     android:layout_height="wrap_content"
     android:background="@drawable/custom_ripple"
     android:id="@+id/relativeLayout"
-    android:padding="10dp">
+    android:padding="8dp">
 
     <ImageView  android:id="@+id/folderIcon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-      android:src="@drawable/folder" />
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:src="@drawable/ic_folder_black_24dp" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/folderName"
         android:text="Whatsapp Videos"
         android:textSize="17dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="10dp"
         android:textColor="#212121"
         android:layout_toRightOf="@+id/folderIcon"
         android:paddingLeft="10dp"
