latest with grid layout

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,6 +9,11 @@
         android:title="Layout Type"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/refresh"
+        android:orderInCategory="100"
+        android:title="Refresh List"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_more"
         android:orderInCategory="100"
         android:title="More Apps"
