--- a/app/src/main/res/layout/grid_video_list_items.xml
+++ b/app/src/main/res/layout/grid_video_list_items.xml
@@ -50,6 +50,14 @@
         android:textColor="#212121"
         android:layout_below="@+id/cardView"
         android:layout_marginTop="10dp"></TextView>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/moreOptions"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/cardView"
+        android:src="@drawable/ic_more_vert_black_24dp"
+        android:layout_alignParentRight="true"></ImageView>
 
 
 </RelativeLayout>
