--- a/app/src/main/res/layout/video_list_item.xml
+++ b/app/src/main/res/layout/video_list_item.xml
@@ -47,7 +47,16 @@
         android:textColor="#212121"
         android:layout_toRightOf="@+id/cardView"
         android:layout_marginTop="10dp"
+        android:layout_toLeftOf="@+id/moreOptions"
+        android:layout_marginRight="10dp"
         android:layout_marginLeft="15dp"></TextView>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/moreOptions"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/ic_more_vert_black_24dp"
+        android:layout_alignParentRight="true"></ImageView>
 
 
 </RelativeLayout>
