--- a/app/src/main/res/layout/activity_view_video.xml
+++ b/app/src/main/res/layout/activity_view_video.xml
@@ -14,6 +14,18 @@
         android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:backgroundTint="#000"></VideoView>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/audioBackImage"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/audioFrontImage"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        app:civ_border_width="5dp"
+        app:civ_border_color="@color/gnt_white"
+        android:layout_centerInParent="true"
+        android:src="@drawable/thumbnail" />
     <com.google.android.ads.nativetemplates.TemplateView
         android:id="@+id/my_template"
         android:layout_centerInParent="true"
@@ -21,6 +33,8 @@
     android:layout_width="300dp"
     android:layout_height="240dp"
         />
+
+
     <TextView
         android:textSize="25.0sp"
         android:textStyle="bold"
@@ -310,6 +324,5 @@
             </LinearLayout>
         </LinearLayout>
     </FrameLayout>
-
 
 </RelativeLayout>
