--- a/app/src/main/res/layout/grid_audio_video_list_items.xml
+++ b/app/src/main/res/layout/grid_audio_video_list_items.xml
@@ -60,6 +60,15 @@
         android:layout_below="@id/cardView"
         android:src="@drawable/ic_more_vert_black_24dp"
         android:layout_alignParentRight="true"></ImageView>
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/save"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/cardView"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/ic_cloud_download_black_24dp"></ImageView>
 
 
 </RelativeLayout>
