--- a/app/src/main/res/layout/activity_whatsapp_video_list.xml
+++ b/app/src/main/res/layout/activity_whatsapp_video_list.xml
@@ -6,12 +6,22 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".WhatsappVideoList">
-    <androidx.recyclerview.widget.RecyclerView
+    <!-- our tablayout to display tabs  -->
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:background="#fff"
-        android:layout_height="match_parent"
-        android:id="@+id/recyclerView">
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        app:tabTextColor="#000"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/Theme.MaterialComponents"/>
 
-    </androidx.recyclerview.widget.RecyclerView>
+    <!-- View pager to swipe views -->
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/pager"
+        android:background="#fff"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent">
+    </androidx.viewpager.widget.ViewPager>
 
 </LinearLayout>
