--- a/app/src/main/res/layout/grid_audio_video_list_items.xml
+++ b/app/src/main/res/layout/grid_audio_video_list_items.xml
@@ -60,15 +60,18 @@
         android:layout_below="@id/cardView"
         android:src="@drawable/ic_more_vert_black_24dp"
         android:layout_alignParentRight="true"></ImageView>
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+    <Button
+        android:layout_width="80dp"
+        android:layout_height="30dp"
         android:id="@+id/save"
         android:layout_marginTop="10dp"
-        android:layout_below="@id/cardView"
+        android:text="Save"
+        android:background="#25D366"
+        android:textColor="#fff"
         android:visibility="gone"
+        android:layout_below="@id/cardView"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_cloud_download_black_24dp"></ImageView>
+        android:src="@drawable/ic_cloud_download_black_24dp"></Button>
 
 
 </RelativeLayout>
