--- a/app/src/main/res/layout/activity_download_videos.xml
+++ b/app/src/main/res/layout/activity_download_videos.xml
@@ -5,6 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DownloadVideos">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:layout_centerInParent="true"
+        android:text="facebook"></Button>
 
     <include layout="@layout/banner_ad_layout"
         android:layout_height="wrap_content"
