--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="progress_transparent">#6377a6</color>
     <color name="colorRipple">#f0f0f0</color>
+    <color name="colorGreen">#25D366</color>
 </resources>
