working on downloader

--- a/app/src/main/res/layout/activity_get_video_url.xml
+++ b/app/src/main/res/layout/activity_get_video_url.xml
@@ -6,6 +6,54 @@
     android:id="@+id/mainLayout"
     android:layout_height="match_parent"
     tools:context=".GetVideoUrlActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="10dp"
+        android:id="@+id/textLayout">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"
+            android:textSize="20dp"
+            android:layout_marginTop="15dp"
+            android:textColor="#000"
+            android:text="How to Use"></TextView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:textSize="15dp"
+            android:id="@+id/pointsText"
+            android:textColor="#000"></TextView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textSize="15dp"
+            android:id="@+id/pointOne"
+            android:textColor="#000"></TextView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textSize="15dp"
+            android:id="@+id/pointTwo"
+            android:textColor="#000"></TextView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="10dp"
+            android:textSize="15dp"
+            android:id="@+id/noteText"
+            android:textColor="#000"></TextView>
+
+
+    </LinearLayout>
     <EditText
         android:layout_width="match_parent"
         android:layout_centerInParent="true"
