--- a/app/src/main/res/layout/activity_get_video_url.xml
+++ b/app/src/main/res/layout/activity_get_video_url.xml
@@ -6,12 +6,19 @@
     android:id="@+id/mainLayout"
     android:layout_height="match_parent"
     tools:context=".GetVideoUrlActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_above="@+id/include"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="10dp"
-        android:id="@+id/textLayout">
+        android:layout_margin="10dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,21 +61,26 @@
 
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
     <EditText
         android:layout_width="match_parent"
         android:layout_centerInParent="true"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_height="50dp"
+        android:layout_margin="25dp"
+        android:hint="    Paste video link here"
+        android:background="@drawable/rounded_edittext"
         android:id="@+id/editText"></EditText>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:layout_margin="20dp"
-        android:id="@+id/linearLayout"
         android:visibility="gone"
-        android:orientation="vertical"
-        android:layout_below="@+id/editText">
+        android:id="@+id/radioGroupLayout"
+        android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -121,18 +133,20 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/button"
         android:textColor="#FFFFFF"
-        android:background="@color/colorGreen"
+        android:background="@color/colorTheme"
         android:padding="10dp"
         android:text="Download Video"></Button>
+    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
     <include layout="@layout/banner_ad_layout"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginBottom="5dp"
+        android:layout_margin="5dp"
+        android:id="@+id/include"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"></include>
 
