--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="progress_transparent">#6377a6</color>
     <color name="colorRipple">#f0f0f0</color>
     <color name="colorGreen">#25D366</color>
+    <color name="colorTheme">#ff0c0b</color>
 </resources>
