--- a/app/src/main/res/layout/fragment_extra.xml
+++ b/app/src/main/res/layout/fragment_extra.xml
@@ -4,9 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ExtraFragment">
+
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_above="@+id/include"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -146,10 +155,13 @@
             android:textSize="20dp"
             android:text="About Us"></TextView>
     </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
     <include layout="@layout/banner_ad_layout"
         android:layout_height="wrap_content"
+        android:id="@+id/include"
         android:layout_width="wrap_content"
-        android:layout_marginBottom="5dp"
+        android:layout_margin="5dp"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"></include>
 </RelativeLayout>
