--- a/app/src/main/res/layout/audio_video_list_item.xml
+++ b/app/src/main/res/layout/audio_video_list_item.xml
@@ -57,6 +57,15 @@
         android:layout_marginTop="10dp"
         android:src="@drawable/ic_more_vert_black_24dp"
         android:layout_alignParentRight="true"></ImageView>
+    <Button
+        android:layout_width="80dp"
+        android:layout_height="30dp"
+        android:id="@+id/save"
+        android:text="Save"
+        android:background="@color/colorGreen"
+        android:textColor="#fff"
+        android:visibility="gone"
+        android:src="@drawable/ic_cloud_download_black_24dp"></Button>
 
 
 </RelativeLayout>
